src/m1/local_controller/M1LocalControl.h

/* External inputs (root inport signals with default storage) */
typedef struct {
  real_T HP_LC[42];                    /* '<Root>/HP_LC' */
} ExtU_M1LocalControl_T;
/* External outputs (root outports fed by signals with default storage) */
typedef struct {
  real_T M1_ACT_F[2316];               /* '<Root>/M1_ACT_F' */
} ExtY_M1LocalControl_T;
/* External inputs (root inport signals with default storage) */
extern ExtU_M1LocalControl_T M1LocalControl_U;
/* External outputs (root outports fed by signals with default storage) */
extern ExtY_M1LocalControl_T M1LocalControl_Y;
/* Model entry point functions */
extern void M1LocalControl_initialize(void);
extern void M1LocalControl_step(void);
extern void M1LocalControl_terminate(void);